# DPatchAndroid

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/sample/qiujuer/net/dpatch/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/net/qiujuer/sample/dpatch/: App.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/sample/qiujuer/net/dpatch/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib-bsdiff/: CMakeLists.txt  build.gradle
lib-bsdiff/src/androidTest/java/net/qiujuer/dpatch/lib/: ExampleInstrumentedTest.java
lib-bsdiff/src/main/: AndroidManifest.xml
lib-bsdiff/src/main/cpp/: native-lib.cpp
lib-bsdiff/src/main/cpp/bslib/: bsdiff.c  bspatch.c
lib-bsdiff/src/main/java/net/qiujuer/dpatch/: DPatchBSDiffCreator.java
lib-bsdiff/src/main/java/net/qiujuer/dpatch/lib/: BSDiff.java
lib-bsdiff/src/main/res/values/: strings.xml
lib-bsdiff/src/test/java/net/qiujuer/dpatch/lib/: ExampleUnitTest.java
lib-core/src/main/java/net/qiujuer/dpatch/: DPatch.java
tools-bsdiff/: build.gradle
tools-bsdiff/src/main/java/net/qiujuer/dpatch/tools/: BSTool.java
tools-ftf/src/main/java/net/qiujuer/dpatch/tools/: FTFTool.java
